--- a/styles/subtitle.module.css
+++ b/styles/subtitle.module.css
@@ -1,4 +1,4 @@
-.section__subtitle {
+/* .section__subtitle {
   color: var(--site-theme-color) !important;
   font-weight: 400;
   
@@ -16,4 +16,19 @@
   height: 1px;
   background: var(--site-theme-color);
   color: var(--site-theme-color);
+} */
+
+.section__line {
+  width: 30px;
+  height: .5px;
+  background: var(--site-theme-color);
+  color: var(--site-theme-color);
+}
+
+.section__subtitle {
+  color: var(--site-theme-color) !important;
+  font-weight: 400;
+  
+  margin-left: 10px;
+  font-size: 1.5rem !important;
 }
